Specify Dockerfile path in CI build step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
 
       - name: Test Docker build
         run: |
-          docker build -t family-budget-service:test .
+          docker build -f docker/Dockerfile -t family-budget-service:test .
           docker images family-budget-service:test
 
       - name: Test Docker container runs
