Speed up tests by reusing MongoDB containers
- Add fast test targets to Makefile and CI workflow - Implement shared
MongoDB container logic in testhelpers - Document fast testing strategy
and usage patterns - Update CLAUDE.md with new test commands and
optimization notes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
           govulncheck ./...
 
       - name: Run tests
-        run: make test-coverage
+        run: make test-coverage-fast
 
       - name: Check test coverage
         run: |
