--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -168,6 +168,8 @@ services:
     ports:
       - "${JAEGER_UI_PORT:-16686}:16686"
       - "${JAEGER_COLLECTOR_PORT:-14268}:14268"
+      - "${JAEGER_OTLP_HTTP_PORT:-4318}:4318"
+      - "${JAEGER_OTLP_GRPC_PORT:-4317}:4317"
     environment:
       COLLECTOR_OTLP_ENABLED: "true"
       SPAN_STORAGE_TYPE: "memory"
