Add Playwright E2E test infrastructure and phase 1 auth tests
- Add package.json with Playwright and MongoDB dev dependencies - Add
playwright.config.js for test setup, browser config, and web server -
Add .gitignore rules for Node.js and Playwright artifacts - Add Makefile
targets for Playwright E2E tests (run, UI, debug) - Add tests/e2e
directory with: - Comprehensive authentication and security test suites
- UserFactory and TestDatabase fixtures - AuthHelper for role-based
flows - LoginPage and RegisterPage page objects - Global setup script
for test DB seeding/cleanup - README documenting phase 1 coverage and
usage - Update .env.example with SESSION_SECRET for local dev - Update
documentation and help texts to use `make run` (remove run-local) -
Update internal web models and templates for new registration fields and
validation - Register strong password validator in HTTP server - Minor
fixes to error rendering and template logic

Phase 1 E2E authentication and security coverage is now complete and
ready for CI/CD integration.

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ MONGODB_DATABASE=family_budget
 MONGO_ROOT_USERNAME=admin
 MONGO_ROOT_PASSWORD=password123
 
+SESSION_SECRET=your-super-secret-session-key-for-local-dev
+
 # Cache Configuration (Optional)
 REDIS_URL=redis://:redis123@redis:6379
 REDIS_PASSWORD=redis123
