--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
           govulncheck ./...
 
       - name: Run tests
-        run: make test-coverage-fast
+        run: make test-coverage
 
       - name: Check test coverage
         run: |
