Add to use PostgreSQL

--- a/.env.example
+++ b/.env.example
@@ -2,21 +2,16 @@
 SERVER_PORT=8080
 SERVER_HOST=0.0.0.0
 
-# Database Configuration
-MONGODB_URI=mongodb://admin:password123@mongodb:27017/family_budget?authSource=admin
-MONGODB_DATABASE=family_budget
+# Database Configuration (PostgreSQL)
+POSTGRESQL_URI=postgres://postgres:postgres123@postgresql:5432/family_budget?sslmode=disable
+POSTGRESQL_DATABASE=family_budget
+POSTGRESQL_USER=postgres
+POSTGRESQL_PASSWORD=postgres123
+POSTGRESQL_SCHEMA=family_budget
 
-# MongoDB Admin Credentials
-MONGO_ROOT_USERNAME=admin
-MONGO_ROOT_PASSWORD=password123
-
-# Cache Configuration (Optional)
-REDIS_URL=redis://:redis123@redis:6379
-REDIS_PASSWORD=redis123
-
-# Mongo Express Configuration
-MONGO_EXPRESS_USERNAME=admin
-MONGO_EXPRESS_PASSWORD=admin
+# Session and Security
+SESSION_SECRET=your-super-secret-session-key-change-in-production
+CSRF_SECRET=your-csrf-secret-key-change-in-production
 
 # Environment
 ENVIRONMENT=development
@@ -31,14 +26,11 @@ ALERTMANAGER_PORT=9093
 JAEGER_UI_PORT=16686
 JAEGER_COLLECTOR_PORT=14268
 NODE_EXPORTER_PORT=9100
-MONGODB_EXPORTER_PORT=9216
-REDIS_EXPORTER_PORT=9121
+POSTGRES_EXPORTER_PORT=9187
 
 # Grafana Configuration
 GRAFANA_USERNAME=admin
 GRAFANA_PASSWORD=admin
 
 # Service Ports
-MONGODB_PORT=27017
-MONGO_EXPRESS_PORT=8081
-REDIS_PORT=6379
+POSTGRESQL_PORT=5432
