--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -8,15 +8,15 @@ global:
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
-    monitor: 'family-budget-service'
-    environment: 'development'
+    monitor: "family-budget-service"
+    environment: "development"
 
 # Alertmanager configuration
 alerting:
   alertmanagers:
     - static_configs:
         - targets:
-          - alertmanager:9093
+            - alertmanager:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
@@ -26,18 +26,18 @@ rule_files:
 # A scrape configuration containing exactly one endpoint to scrape:
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  
+
   # Prometheus self-monitoring
-  - job_name: 'prometheus'
+  - job_name: "prometheus"
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ["localhost:9090"]
     scrape_interval: 30s
     metrics_path: /metrics
 
   # Family Budget Service Application
-  - job_name: 'family-budget-service'
+  - job_name: "family-budget-service"
     static_configs:
-      - targets: ['app:8080']
+      - targets: ["app:8080"]
     scrape_interval: 15s
     scrape_timeout: 10s
     metrics_path: /metrics
@@ -48,35 +48,28 @@ scrape_configs:
     #   password: password
 
   # Node Exporter for system metrics
-  - job_name: 'node-exporter'
+  - job_name: "node-exporter"
     static_configs:
-      - targets: ['node-exporter:9100']
+      - targets: ["node-exporter:9100"]
     scrape_interval: 30s
     metrics_path: /metrics
 
-  # MongoDB Exporter for database metrics
-  - job_name: 'mongodb-exporter'
+  # PostgreSQL Exporter for database metrics
+  - job_name: "postgres-exporter"
     static_configs:
-      - targets: ['mongodb-exporter:9216']
-    scrape_interval: 30s
-    metrics_path: /metrics
-
-  # Redis Exporter for cache metrics (if used)
-  - job_name: 'redis-exporter'
-    static_configs:
-      - targets: ['redis-exporter:9121']
+      - targets: ["postgres-exporter:9187"]
     scrape_interval: 30s
     metrics_path: /metrics
 
   # Blackbox Exporter for external monitoring
-  - job_name: 'blackbox'
+  - job_name: "blackbox"
     metrics_path: /probe
     params:
-      module: [http_2xx]  # Look for a HTTP 200 response.
+      module: [http_2xx] # Look for a HTTP 200 response.
     static_configs:
       - targets:
-        - http://app:8080/health
-        - http://app:8080/ready
+          - http://app:8080/health
+          - http://app:8080/ready
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
@@ -86,12 +79,11 @@ scrape_configs:
         replacement: blackbox-exporter:9115
 
   # cAdvisor for container metrics
-  - job_name: 'cadvisor'
+  - job_name: "cadvisor"
     static_configs:
-      - targets: ['cadvisor:8080']
+      - targets: ["cadvisor:8080"]
     scrape_interval: 30s
     metrics_path: /metrics
-
 # Remote write configuration (for long-term storage)
 # remote_write:
 #   - url: "http://victoria-metrics:8428/api/v1/write"
