Migrate database backend from PostgreSQL to SQLite

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Family Budget Service - Development Environment Configuration
-# This file contains default values for local development with PostgreSQL
+# This file contains default values for local development with SQLite
 
 # Server Configuration
 SERVER_PORT=8080
@@ -8,20 +8,12 @@ SERVER_READ_TIMEOUT=15s
 SERVER_WRITE_TIMEOUT=15s
 SERVER_IDLE_TIMEOUT=60s
 
-# PostgreSQL Database Configuration
-POSTGRESQL_URI=postgres://postgres:postgres123@localhost:5432/family_budget?sslmode=disable
-POSTGRESQL_DATABASE=family_budget
-POSTGRESQL_SCHEMA=family_budget
-POSTGRESQL_MAX_OPEN_CONNS=25
-POSTGRESQL_MAX_IDLE_CONNS=5
-POSTGRESQL_CONN_MAX_LIFETIME=5m
-POSTGRESQL_CONN_MAX_IDLE_TIME=1m
-POSTGRESQL_SSL_MODE=disable
+# SQLite Database Configuration
+DATABASE_PATH=./data/budget.db
 
 # Web/Session Configuration
 SESSION_SECRET=your-super-secret-session-key-for-local-development-change-me
 SESSION_TIMEOUT=24h
-CSRF_SECRET=your-csrf-secret-key-for-local-development-change-me
 COOKIE_SECURE=false
 COOKIE_HTTP_ONLY=true
 COOKIE_SAME_SITE=Lax
@@ -34,29 +26,6 @@ LOG_OUTPUT_PATH=stdout
 # Application Environment
 ENVIRONMENT=development
 
-# Docker Compose Environment Variables (for docker-compose.yml)
-POSTGRESQL_PORT=5432
-POSTGRESQL_USER=postgres
-POSTGRESQL_PASSWORD=postgres123
-
-# Observability Stack Configuration
-PROMETHEUS_PORT=9090
-GRAFANA_PORT=3000
-GRAFANA_USERNAME=admin
-GRAFANA_PASSWORD=admin
-JAEGER_UI_PORT=16686
-JAEGER_COLLECTOR_PORT=14268
-JAEGER_OTLP_HTTP_PORT=4318
-JAEGER_OTLP_GRPC_PORT=4317
-
-# Exporters Configuration
-NODE_EXPORTER_PORT=9100
-POSTGRES_EXPORTER_PORT=9187
-ALERTMANAGER_PORT=9093
-
-# Development Utilities
-REUSE_POSTGRES_CONTAINER=true
-
 # Database Migration Configuration
 MIGRATION_PATH=./migrations
 MIGRATION_TIMEOUT=30s
@@ -64,7 +33,6 @@ MIGRATION_TIMEOUT=30s
 # Testing Configuration
 TEST_DATABASE_PREFIX=testdb_
 TEST_CLEANUP_ENABLED=true
-TEST_CONTAINER_REUSE=true
 
 # Performance Configuration
 ENABLE_PROFILING=true
@@ -77,15 +45,11 @@ CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080
 
 # Feature Flags
 ENABLE_CACHING=true
-ENABLE_METRICS=true
-ENABLE_TRACING=true
 ENABLE_HEALTH_CHECKS=true
 
 # Development specific settings
 AUTO_MIGRATE=true
-SEED_DATABASE=true
-ENABLE_SQL_LOGGING=true
-ENABLE_QUERY_ANALYSIS=true
+ENABLE_SQL_LOGGING=false
 
 # Backup Configuration
 BACKUP_ENABLED=false
@@ -112,7 +76,6 @@ CACHE_CLEANUP_INTERVAL=10m
 
 # Monitoring Configuration
 HEALTH_CHECK_INTERVAL=30s
-METRICS_COLLECTION_INTERVAL=15s
 
 # Development Tools
 ENABLE_PPROF=true
@@ -132,6 +95,9 @@ SUPPORTED_LANGUAGES=en,ru
 # External Services (Development stubs)
 EXTERNAL_API_TIMEOUT=30s
 EXTERNAL_API_RETRIES=3
+
+# Docker Compose Configuration (when using docker-compose)
+DATA_DIR=./data
 
 # Note: This file is for development only
 # For production deployment, use environment-specific configuration
