--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,42 @@
+# =============================================================================
+# Family Budget Service - Environment Configuration
+# =============================================================================
+# Copy this file to .env and customize for your environment
+# For production, ensure all secrets are properly configured!
+
+# -----------------------------------------------------------------------------
 # Server Configuration
+# -----------------------------------------------------------------------------
 SERVER_PORT=8080
 SERVER_HOST=0.0.0.0
 
-# Database Configuration (PostgreSQL)
-POSTGRESQL_URI=postgres://postgres:postgres123@postgresql:5432/family_budget?sslmode=disable
-POSTGRESQL_DATABASE=family_budget
-POSTGRESQL_USER=postgres
-POSTGRESQL_PASSWORD=postgres123
-POSTGRESQL_SCHEMA=family_budget
+# -----------------------------------------------------------------------------
+# Database Configuration (SQLite)
+# -----------------------------------------------------------------------------
+# Path to SQLite database file
+# For Docker: /data/budget.db (mounted as volume)
+# For local dev: ./data/budget.db
+DATABASE_PATH=/data/budget.db
 
+# -----------------------------------------------------------------------------
 # Session and Security
+# -----------------------------------------------------------------------------
+# IMPORTANT: Change these secrets in production!
+# Generate with: openssl rand -base64 32
 SESSION_SECRET=your-super-secret-session-key-change-in-production
-CSRF_SECRET=your-csrf-secret-key-change-in-production
 
-# Environment
-ENVIRONMENT=development
+# -----------------------------------------------------------------------------
+# Application Configuration
+# -----------------------------------------------------------------------------
+# Environment: development | production
+ENVIRONMENT=production
 
 # Logging Configuration
+# Levels: debug | info | warn | error
 LOG_LEVEL=info
 
-# Observability Stack Ports
-PROMETHEUS_PORT=9090
-GRAFANA_PORT=3000
-ALERTMANAGER_PORT=9093
-JAEGER_UI_PORT=16686
-JAEGER_COLLECTOR_PORT=14268
-NODE_EXPORTER_PORT=9100
-POSTGRES_EXPORTER_PORT=9187
-
-# Grafana Configuration
-GRAFANA_USERNAME=admin
-GRAFANA_PASSWORD=admin
-
-# Service Ports
-POSTGRESQL_PORT=5432
+# -----------------------------------------------------------------------------
+# Docker Compose Configuration
+# -----------------------------------------------------------------------------
+# Directory for SQLite data (used by docker-compose)
+DATA_DIR=./data
